# duckdb_magic

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  generate_magic_mgc.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: magic_extension.cpp  quack_extension.cpp
src/include/: magic_extension.hpp
test/: README.md
test/sql/: basic_magic.test  remote_magic.test
vcpkg_ports/libmagic/: 00DUCK-native-file.patch  portfile.cmake  unofficial-libmagic-config.cmake.in
vcpkg_ports/zlib/: vcpkg-cmake-wrapper.cmake
